src/test/ui/feature-gates/feature-gate-stmt_expr_attributes.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/feature-gate-stmt_expr_attributes.rs:1:16
   |
LL | const X: i32 = #[allow(dead_code)] 8;
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/15701
   = help: add #![feature(stmt_expr_attributes)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
