src/test/ui/feature-gates/feature-gate-stmt_expr_attributes.rs
const X: i32 = #[allow(dead_code)] 8;
//~^ ERROR attributes on expressions are experimental

fn main() {}
